--- a/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
+++ b/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
@@ -383,41 +383,11 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{loc:Loc AverageItemllvl}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                            <TextBlock Text="{loc:Loc AverageItemLevel}" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
-
-            <!--<DataGrid.RowDetailsTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="Hello" />
-                        <TextBlock Grid.Row="0" Grid.Column="1" Text="Hello" />
-                        <TextBlock Grid.Row="0" Grid.Column="2" Text="Hello" />
-                        <TextBlock Grid.Row="0" Grid.Column="3" Text="Hello" />
-                        <TextBlock Grid.Row="0" Grid.Column="4" Text="Hello" />
-
-                        <TextBlock Grid.Row="1" Grid.Column="0" Text="Hello" />
-                        <TextBlock Grid.Row="1" Grid.Column="1" Text="Hello" />
-                        <TextBlock Grid.Row="1" Grid.Column="2" Text="Hello" />
-                        <TextBlock Grid.Row="1" Grid.Column="3" Text="Hello" />
-                        <TextBlock Grid.Row="1" Grid.Column="4" Text="Hello" />
-                    </Grid>
-                </DataTemplate>
-            </DataGrid.RowDetailsTemplate>-->
         </DataGrid>
 
         <DataGrid Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" GridLinesVisibility="None" 
